[package]
name = "canvas"
version = "0.1.0"
authors = ["The wasm-bindgen Developers"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
js-sys = "0.3.17"
wasm-bindgen = "0.2.40"

[dependencies.rand]
version = "0.6.5"
features = ['wasm-bindgen']

[dependencies.web-sys]
version = "0.3.4"
features = [
  'CanvasRenderingContext2d',
  'Document',
  'Element',
  'HtmlCanvasElement',
  'console',
  'Window',
'HtmlElement',
'Node',
]
